# Covit-Assignments

Project01/: main.py  pyproject.toml
Project_AIagent/agents/01_hello_agent/: agent.py
midterm/: README.md  agent_core.py  app.py  config.py  env.example  main.py  ollama_utils.py  pyproject.toml
project02/: main.py  pyproject.toml
project02/.claude/: settings.local.json
project03/: README.md  main.py  nb2pdf_agent.py  pyproject.toml
project03/.claude/: settings.local.json
project04/: Research_Agent_Pro_HITL.ipynb  pyproject.toml  research_agent_hitl.db-shm  research_agent_hitl.db-wal
project08/: main.py  notebook-02.ipynb  pyproject.toml
project08/DL_snadbox/: notbook_updated.ipynb
