[project]
name = "agentlens"
version = "0.1.0"
description = "AI-Powered LLM Discovery Assistant for Agentic AI Workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Muhammad Shahid Usman" }
]
dependencies = [
    "openai>=1.30.0",
    "ollama>=0.2.0",
    "streamlit>=1.35.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]